study_revision/Kubernetes/deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: streamlit
  labels:
    name: streamlit
