study_revision/Kubernetes/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
  namespace: default
spec:
  selector:
    app: streamlit-app
  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501
      nodePort: 30007
  type: NodePort
