study_revision/Kubernetes/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: dhana.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamlit-service
                port:
                  number: 8501
